[package]
name = "hochwasser"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
anyhow = "1.0"

itertools = "0.10.1"

structopt = { version = "0.3", default-features = false }

bytes = "1"
tokio = { version = "1.5", features = ["full"] }
futures = "0.3.16"

raw-socket = { git = "https://github.com/sumomoneko/raw-socket" }

libc = "0.2.99"
nix = "0.22.1"

log = "0.4.14"
env_logger = "0.9.0"